--- a/regex/Makefile
+++ b/regex/Makefile
@@ -1,12 +1,16 @@
 # Compiles all multi-regexes.
 
-.PHONY: all clean
+.PHONY: all inject clean
 OBJECTS = input session
 
-all: $(OBJECTS)
+all: $(OBJECTS) inject
 
 %:
 	python sub_regex.py $@.regex $@.out
+
+inject:
+	python update_regex.py regex input.out ../js/CourseParser.js
+	python update_regex.py subCourseRegex session.out ../js/CourseParser.js
 
 clean:
 	rm *.out
