Began work on python test file.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,20 @@
 .PHONY: all test
 
-TESTS=
+TESTS=*.test
 
 all: test
 
-test:
-	python test.py $(TESTS)
+compile-check:
+	@echo Checking for compiled *.out files.
+	@echo This Makefile will fail if you haven't compiled first.
+	[ -f input.out ]
+	[ -f session.out ]
+
+test: compile-check
+	python test.py -f test.conf $(TESTS)
+
+sanity: compile-check
+	python test.py -f test.conf --fail-fast $(TESTS)
 
 clean:
 	@true
