Regex injection now takes flags as optional argument.

--- a/js/Makefile
+++ b/js/Makefile
@@ -3,8 +3,8 @@
 all: inject
 
 inject:
-	python update_regex.py regex input.out CourseParser.js
-	python update_regex.py subCourseRegex session.out CourseParser.js
+	python update_regex.py regex input.out CourseParser.js gm
+	python update_regex.py subCourseRegex session.out CourseParser.js gm
 
 clean:
 	rm -f *.out
