Update build system to include multiple regexs

--- a/etc/build-config.json
+++ b/etc/build-config.json
@@ -15,7 +15,7 @@
         "../../tests"
     ],
 
-    "inject-file": "../js/CourseParser.js",
+    "inject-file": "../../js/CourseParser.js",
 
     "to-inject": {
         "input.out": "regex",
